--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ motor~=3.3.1
 pytest~=7.4.2
 pydantic~=2.4.2
 bit~=0.8.0
-cryptography~=41.0.4
 eth-keys~=0.4.0
-eth-hash[pycryptodome]~=0.5.2
-python-mock~=0.0.3
+cryptography~=41.0.4
+mongomock~=4.1.2
+eth-hash[pycryptodome]
